# airties-agent

./: .databricksignore  .env.example  .gitignore  app.yaml  databricks.yml  deploy.sh  mlflow.db  pyproject.toml  run  start_local.sh
.claude/commands/: dbx-profiles.md  pgh.md
agent/: agent.py  context_management.py  start_server.py  utils.py
app/client/: index.html
config/: .env.example
config/ka/: ka_airties.yml
data/genie-capture-sql/: SELECT_CAST_NULL_AS_BIGINT_AS_event_id_CAST_NULL.sql  SELECT_CAST_NULL_AS_STRING_AS_event_type_CAST_NU.sql  SELECT_COUNT_AS_offline_mesh_nodes_FROM_ac_ire.sql  SELECT_COUNT_DISTINCT_d_id_AS_offline_mesh_nodes.sql  SELECT_COUNT_DISTINCT_dim_device_id_AS_offline.sql  SELECT_FROM_ac_ireland_dev_ddm_dim_devices.sql  SELECT_NULL_AS_average_download_speed_NULL_AS_ave.sql  SELECT_No_speed_test_data_available_in_schema_AS.sql  SELECT_No_speed_test_or_performance_data_downloa.sql  SELECT_No_speed_test_results_table_exists_in_the.sql  (+4 more)
deploy/: deploy.sh  sync_databricks_yml_from_env.py
docs/: Build & setup flow.md  agent-forge_guide.md  agent-forge_overview.md  context-management.md  known-issues.md
eval/: eval_dataset.py  eval_dataset_gt.py  eval_dataset_routing.py  predict.py  run_eval.py  run_eval_routing.py  scorer.py
prompt/: knowledge.base  main.prompt
scripts/: create_eval_dataset.py  init_check_dbx_env.py  reset_workspace.py  reset_workspace.sh  setup_dbx_env.py  start_local.sh  teardown.py
tests/: demo_context_management.py  test_context_management.py
tools/: query_airties_ka.py  sql_executor.py
visual/: start.sh
(+95 files in other folders)
